# scan-ancv-autoit-assoconnect

./: README.md  auto_saisie_ancv.au3  barcode_reader.ipynb  barcodes.odt  formule.au3  pyproject.toml  select_cheque.au3  select_cheque.exe.bak
ancv/: __main__.py  actions.py
